kubectl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: avalara-tax-bot
spec:
  selector:
    matchLabels:
      app: avalara-tax-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: avalara-tax-bot
    spec:
      containers:
        - image: 191518685251.dkr.ecr.us-west-1.amazonaws.com/avalara-tax-bot:latest
          imagePullPolicy: Always
          name: avalara-tax-bot
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: avalara-tax-bot
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: avalara-tax-bot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: avalara-tax-bot
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:191518685251:certificate/bd71758c-edcf-47b8-a6b6-61b9063b6b77
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: avalara-tax-bot
                port:
                  number: 80
